<!--
  ~ Copyright 2017 GLodi
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">GitNav</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="path_to_images">/data/data/giuliolodi.gitnav/images</string>

    <string name="pref_key">giuliolodi.PREF_KEY</string>
    <string name="user_key">giuliolodi.USER_KEY</string>
    <string name="login_key">giuliolodi.LOGIN_KEY</string>
    <string name="token_key">giuliolodi.TOKEN_KEY</string>
    <string name="authd_key">giuliolodi.AUTHD_KEY</string>
    <string name="email_key">giuliolodi.EMAIL_KEY</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="forked_from">Forked from: </string>
    <string name="network_error">Network access unavailable</string>
    <string name="user_followed">User followed</string>
    <string name="user_unfollowed">User unfollowed</string>
    <string name="repo_starred">Repository starred</string>
    <string name="repo_unstarred">Repository unstarred</string>
    <string name="gist_starred">Gist starred</string>
    <string name="gist_unstarred">Gist unstarred</string>
    <string name="unfollow">Unfollow</string>
    <string name="send_email">Send email</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="open_repo">Open repository</string>

    <string name="starred">Starred</string>
    <string name="profile">Profile</string>
    <string name="repository">Repository</string>
    <string name="repositories">Repositories</string>
    <string name="stargazers">Stargazers</string>
    <string name="search">Search</string>
    <string name="gists">Gists</string>
    <string name="gist">Gist</string>
    <string name="trending">Trending</string>
    <string-array name="trending_array">
        <item>Trending daily</item>
        <item>Trending weekly</item>
        <item>Trending monthly</item>
    </string-array>
    <string name="options">Options</string>
    <string name="language">Language</string>
    <string name="events">Events</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="themelight">Theme: Light</string>
    <string name="themedark">Theme: Dark</string>

    <string name="no_repositories">No repositories</string>
    <string name="no_users">No users</string>
    <string name="no_contributors">No contributors</string>
    <string name="no_collaborators">No collaborators</string>
    <string name="no_code">No code</string>
    <string name="no_gists_mine">You do not have any gist</string>
    <string name="no_gists_starred">You do not have any starred gist</string>
    <string name="no_readme">README not found</string>
    <string name="download_file_error">Error downloading file</string>
    <string name="no_open_issues">No open issues</string>
    <string name="no_closed_issues">No closed issues</string>
    <string name="no_comments">No comments</string>
    <string name="no_events">No events</string>
    <string name="no_forks">No forks</string>
    <string name="no_description">No description</string>
    <string name="no_commits">No commits</string>
    <string name="no_stargazers">No stargazers</string>

    <string name="mine">Mine</string>
    <string name="users">Users</string>
    <string name="collaborators">Collaborators</string>
    <string name="code">Code</string>
    <string name="fork">Fork</string>
    <string name="forks">Forks</string>
    <string name="issue">Issue</string>
    <string name="issues">Issues</string>
    <string name="comments">Comments</string>
    <string name="contributors">Contributors</string>
    <string name="contributions">Contributions: </string>
    <string name="about">About</string>
    <string name="open_link">Open link</string>
    <string name="readme">Readme</string>
    <string name="files">Files</string>
    <string name="commits">Commits</string>
    <string name="file">File</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="publics">Public</string>
    <string name="privates">Private</string>
    <string name="content">Content</string>
    <string name="anonymous">Anonymous</string>
    <string name="repos_owned">Repos owned</string>
    <string name="def">Default</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="info">Info</string>
    <string name="repo_forked">Repo forked</string>

    <string name="created">Created</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="pushed">Pushed</string>
    <string name="updated">Updated</string>
    <string name="stars">Stars</string>
    <string name="name">Name</string>

    <string name="sign_out">Sign out</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="currently_logged_in_as">You are currently logged in as</string>
    <string name="logged_in">Logged in!</string>
    <string name="sign_up"><u>Sign up for GitHub!</u></string>
    <string name="insert_credentials">Please insert credentials</string>
    <string name="confirm_fork">Do you want to fork</string>
    <string name="web_authentication">Web Authentication</string>
    <string name="theme_switched">Theme switched</string>

</resources>
