<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 GLodi
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/search_sort_icon"
        android:title=""
        android:icon="@drawable/ic_sort_white_24dp"
        app:showAsAction="always">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/search_sort_default"
                    android:title="@string/def"
                    android:checked="true" />

                <item
                    android:id="@+id/search_sort_updated"
                    android:title="@string/updated" />

                <item
                    android:id="@+id/search_sort_pushed"
                    android:title="@string/pushed" />

                <item
                    android:id="@+id/search_sort_alphabetical"
                    android:title="@string/alphabetical" />

                <item
                    android:id="@+id/search_sort_stars"
                    android:title="@string/stars" />

                <item
                    android:id="@+id/search_sort_repos"
                    android:title="@string/repos_owned"
                    android:visible="false" />

                <item
                    android:id="@+id/search_sort_followers"
                    android:title="@string/followers"
                    android:visible="false" />

            </group>

        </menu>

    </item>


    <item
        android:id="@+id/action_options"
        android:orderInCategory="100"
        android:title="@string/options"
        app:showAsAction="never" />

</menu>