<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 GLodi
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_repos"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/repositories" />
        <item
            android:id="@+id/nav_starred"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/starred" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_gists"
            android:icon="@drawable/ic_content_paste_black_24dp"
            android:title="@string/gists" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/options" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
