<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 GLodi
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/user_activity_bottom_menu_following"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/following"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/user_activity_bottom_menu_followers"
        android:enabled="true"
        android:icon="@drawable/ic_people_blue_24dp"
        android:title="@string/followers"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/user_activity_bottom_menu_info"
        android:enabled="true"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:title="@string/info"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/user_activity_bottom_menu_repos"
        android:enabled="true"
        android:icon="@drawable/octicons_430_repo_256_0_000000_none"
        android:title="@string/repositories"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/user_activity_bottom_menu_events"
        android:enabled="true"
        android:icon="@drawable/octicons_430_calendar_256_0_000000_none"
        android:title="@string/events"
        app:showAsAction="ifRoom" />
</menu>